terraform-gcp/cloud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-cloud-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: argo.35.252.24.207.sslip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
